modified CSS and HTML

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="dtext">
             Lorem imsum dolor sit amet, consectetur adipiscing elit. Pron in ante viverra, rutrum erat rutrum, consectetur mi. Proin at <br> est. Nullam purus ex, iaculis sed erat sed, blandit tincidunt quam. Cras scelerisque id quam sed dignissim <br> Pellentesque urna nunc, gravida quis hendrerit ac, tristique ut quam. Vivamus suscipit dignissim tortor nex congue.
         </div>
-        <div class="blackbg">...
+        <div class="blackbg">
           <div class="thumb">
             <div><img src="img/1st small.svg" alt="" /></div>
             <div><img src="img/2nd small.svg" alt="" /></div>
